fixed a visual issue where white space would appear directly below the dropdown chevron of the opportunities section

--- a/Code/Website/public/style.css
+++ b/Code/Website/public/style.css
@@ -214,8 +214,10 @@ width: 27px;
     justify-items: center;
 }
 @media (pointer: coarse) {
-    .tooltip { 
-        margin-bottom: 1.5%;
+    .tooltip {
+        /*This is to ensure there is sufficient space between
+        checkboxes and their corresponding text*/
+        padding-bottom: 1.5%;
     }
 }
 
